--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Tobara
 email: raulvillegasleiva@gmail.com
 url: https://tobarapp.github.io
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Tobara - Consumo Colaborativo"
 skills: "Ofertas en tiempo real - Consumo colaborativo - Visibilidad y mayor alcance para PyMes"
 meta_author: Villegas Raúl
 
